package models.enums;

public enum BillStatus {
    PAID, UNPAID;
}
