package models.enums;

public enum ChargerStatus {
    AVAILABLE, NOT_AVAILABLE
}
