package models.enums;

public enum FloorStatus {
    AVAILABLE, NOT_AVAILABLE
}
