package models.enums;

public enum GateStatus {
    OPENED, CLOSED, UNDER_MAINTENANCE;
}
