package models.enums;

public enum GateType {
    ENTRY, EXIT;
}
