package models.enums;

public enum GuardStatus {
    AVAILABLE, NOT_AVAILABLE
}
