package models.enums;

public enum ParkingLotStatus {
    AVAILABLE, NOT_AVAILABLE, UNDER_MAINTENANCE;
}
