package models.enums;

public enum ParkingSpotStatus {
    AVAILABLE, NOT_AVAILABLE, UNDER_MAINTENANCE;
}
