package models.enums;

public enum PaymentMode {
    UPI, CARD, CASH
}
