package models.enums;

public enum PaymentStatus {
    SUCCESSFUL, IN_PROGRESS, FAILED
}
