package models.enums;

public enum VehicleType {
    TWO_WHEELER, FOUR_WHEELER, EV_VEHICLE, LUXURY_VEHICLE;
}
