package services.Strategy.SpotAllocationStrategy;

public class SpotAllocationStrategy {
}
